--- a/README.adoc
+++ b/README.adoc
@@ -10,6 +10,52 @@ title says it all
 > lein test
 ```
 
+== Verify AWS Install
+
+```bash
+> which aws
+/usr/local/bin/aws
+
+> aws --version
+aws-cli/2.4.6 Python/3.9.9 Darwin/21.3.0 source/x86_64 prompt/off
+```
+
+== Verify Clojure Install
+
+```bash
+> java --version
+java 17.0.1 2021-10-19 LTS
+Java(TM) SE Runtime Environment (build 17.0.1+12-LTS-39)
+Java HotSpot(TM) 64-Bit Server VM (build 17.0.1+12-LTS-39, mixed mode, sharing)
+
+> lein --version
+Leiningen 2.9.8 on Java 17.0.1 Java HotSpot(TM) 64-Bit Server VM
+```
+
+== Config & Credential files
+
+After running `aws configure` we see our credential and config files:
+
+```pre
+> cat ~/.aws/credentials
+[default]
+aws_access_key_id=AKIAWAXXXXXXXXXXX7FX
+aws_secret_access_key=V6pI/f3XXXXXXXXXXXXXXXXXXXXXXs63HirtM1WZ
+
+> cat ~/.aws/config
+[default]
+region = us-west-1
+output = json
+```
+
+Note that you can override the values in the above files by setting environment variables:
+
+```bash
+export AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
+export AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+export AWS_DEFAULT_REGION=us-west-2
+```
+
 == License
 
 Copyright © 2022  Alan Thompson
